--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
     <h1 th:text="'List of owners'">List of owners...</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First name</th>
+            <th>Last name</th>
+        </tr>
+        </thead>
+        <body>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner?.id}">1</td>
+            <td th:text="${owner?.firstName}">John</td>
+            <td th:text="${owner?.lastName}">doe</td>
+        </tr>
+        </body>
+    </table>
 </body>
 </html>
